// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCracoScript build 1`] = `
Array [
  "D:\\\\dev\\\\@react-ryo-cli\\\\node_modules\\\\@craco\\\\craco\\\\bin\\\\craco.js",
  "build",
  "--config",
  "D:\\\\dev\\\\@react-ryo-cli\\\\packages\\\\react-ryo-cli\\\\config\\\\craco\\\\craco.config.js",
]
`;

exports[`getCracoScript build 2`] = `
Array [
  "D:\\\\dev\\\\@react-ryo-cli\\\\node_modules\\\\@craco\\\\craco\\\\bin\\\\craco.js",
  "build",
  "--config",
  "D:\\\\dev\\\\@react-ryo-cli\\\\packages\\\\react-ryo-cli\\\\config\\\\craco\\\\craco.config.js",
]
`;

exports[`getCracoScript build:development 1`] = `
Array [
  "D:\\\\dev\\\\@react-ryo-cli\\\\node_modules\\\\@craco\\\\craco\\\\bin\\\\craco.js",
  "build",
  "--config",
  "D:\\\\dev\\\\@react-ryo-cli\\\\packages\\\\react-ryo-cli\\\\config\\\\craco\\\\craco.config.js",
]
`;

exports[`getCracoScript build:package 1`] = `
Array [
  "D:\\\\dev\\\\@react-ryo-cli\\\\node_modules\\\\@craco\\\\craco\\\\bin\\\\craco.js",
  "build",
  "--config",
  "D:\\\\dev\\\\@react-ryo-cli\\\\packages\\\\react-ryo-cli\\\\config\\\\craco\\\\craco.config.js",
]
`;

exports[`getCracoScript build:package:development 1`] = `
Array [
  "D:\\\\dev\\\\@react-ryo-cli\\\\node_modules\\\\@craco\\\\craco\\\\bin\\\\craco.js",
  "build:package:development",
  "--config",
  "D:\\\\dev\\\\@react-ryo-cli\\\\packages\\\\react-ryo-cli\\\\config\\\\craco\\\\craco.config.js",
]
`;

exports[`getCracoScript build:stats 1`] = `
Array [
  "D:\\\\dev\\\\@react-ryo-cli\\\\node_modules\\\\source-map-explorer\\\\dist\\\\cli.js",
  "undefined/static/js/*.js",
]
`;

exports[`getCracoScript eject 1`] = `
Array [
  "eject",
]
`;

exports[`getCracoScript test 1`] = `
Array [
  "D:\\\\dev\\\\@react-ryo-cli\\\\node_modules\\\\@craco\\\\craco\\\\bin\\\\craco.js",
  "test",
  "--config",
  "D:\\\\dev\\\\@react-ryo-cli\\\\packages\\\\react-ryo-cli\\\\config\\\\craco\\\\craco.config.js",
]
`;

exports[`getCracoScript test:production 1`] = `
Array [
  "D:\\\\dev\\\\@react-ryo-cli\\\\node_modules\\\\@craco\\\\craco\\\\bin\\\\craco.js",
  "test",
  "--ci",
  "--collectCoverage",
  "--config",
  "D:\\\\dev\\\\@react-ryo-cli\\\\packages\\\\react-ryo-cli\\\\config\\\\craco\\\\craco.config.js",
]
`;

exports[`getCracoScript test:update 1`] = `
Array [
  "D:\\\\dev\\\\@react-ryo-cli\\\\node_modules\\\\@craco\\\\craco\\\\bin\\\\craco.js",
  "test",
  "--updateSnapshot",
  "--config",
  "D:\\\\dev\\\\@react-ryo-cli\\\\packages\\\\react-ryo-cli\\\\config\\\\craco\\\\craco.config.js",
]
`;

exports[`getCracoScript test:watch 1`] = `
Array [
  "D:\\\\dev\\\\@react-ryo-cli\\\\node_modules\\\\@craco\\\\craco\\\\bin\\\\craco.js",
  "test",
  "--config",
  "D:\\\\dev\\\\@react-ryo-cli\\\\packages\\\\react-ryo-cli\\\\config\\\\craco\\\\craco.config.js",
]
`;
